# bootcamp-python-42ai

./: notes.md
module00/ex00/: answers.txt
module00/ex01/: exec.py
module00/ex02/: whois.py
module00/ex03/: count.py
module00/ex04/: operations.py
module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module00/ex06/: recipe.py
module00/ex07/: filterwords.py
module00/ex08/: sos.py
module00/ex09/: guess.py
module00/ex10/: loading.py
module01/ex00/: book.py  recipe.py  test.py
module01/ex01/: game.py
module01/ex02/: test.py  vector.py
module01/ex03/: generator.py
module01/ex04/: eval.py
module01/ex05/: the_bank.py
module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module02/ex01/: main.py
module02/ex02/: logger.py
module02/ex03/: csvreader.py  main.py  test_bad.py  test_good.py
module02/ex04/: build.sh  setup.cfg
module02/ex04/src/my_minipack/: logger.py  progressbar.py
module03/ex00/: NumPyCreator.py
module03/ex01/: ImageProcessor.py
module03/ex02/: ScrapBooker.py
module03/ex03/: ColorFilter.py
module03/ex04/: Kmeans.py
module04/ex00/: FileLoader.py
module04/ex01/: YoungestFellah.py
module04/ex02/: ProportionBySport.py
module04/ex03/: HowManyMedals.py
module04/ex04/: SpatioTemporalData.py
module04/ex05/: HowManyMedalsByCountry.py
module04/ex06/: MyPlotLib.py
module04/ex07/: Komparator.py
resources/module03/ex03/: test.py
resources/module04/: correction.md
